#  any later version.
#
#  CLIgen is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with CLIgen; see the file COPYING.

- Apple Darwin port

- New non-line scrolling mode in getline. Use non-scrolling with:
  cligen_line_scrolling_set(h, 0);

- Added signal SIGWINCH handling for window change size and adapting printing
  of help string to window resize. 

- Added support for multi-argument callback CLI expand functions.
    See cligen_expandv_str2fn()
	
- Added support for multi-argument callback CLI functions. E.g
    int callback(cligen_handle handle, cvec *cvv, cvec *argv);
  where the third argument is a vector instead of a single argument.
  To use this, all CLI callback functions need to be rewritten.
  The old style remains but cannot be mixed with the new.
  See cligen_callback_str2fnv
	
- removed alias int for int32.	
- Added option for "relaxed" handling of variable matching. So that 
eg <a:string length[4]> | <a:string length[40]> is allowed. 
See cligen_match_cgvar_same().

- type_max2str - get max value of a type

- Added doxygen reference and function call documentation. Just do 'make doc' 
  and direct your browser to doc/index.html

- Fixed parse bugs for some choices syntax, eg <a choice:1.0|length> did not work.

- Merge sub-trees with original trees containing same symbols. Eg a cligen-spec:
	"a @TREE; a b;"
  if TREE contains the symbol 'b', the two 'b:s' were not merged properly.

- Allow CR/LF in help-texts

R3.5.0 December 2014
====================

Extended type system with signed and unsigned ints: int8, int16,
int32, int64, uint8, uint16, uint32, uint64.
You need to to the following in your code:
Rename all cligen syntax types.
        int      -> int32
        number   -> int32