@@ -16,7 +16,9 @@
 #  You should have received a copy of the GNU General Public License
 #  along with CLIgen; see the file COPYING.
 
-- Apple Darwin port
+- Fixed newline for non-line scrolling mode
+
+- Port to Mac / Apple Darwin
 
 - New non-line scrolling mode in getline. Use non-scrolling with:
   cligen_line_scrolling_set(h, 0);
